fwb: SystemUI: Add VPN to the icon blacklist in tuner
Change-Id: I579d1ec7a6d66ac7055cce7d7e905bae7dc5cd9a

--- a/packages/SystemUI/res/values/du_strings.xml
+++ b/packages/SystemUI/res/values/du_strings.xml
@@ -82,6 +82,9 @@
     <!-- QS customizer -->
     <string name="reset_customizer">Reset order</string>
 
+    <!-- VPN -->
+    <string name="quick_settings_vpn_title">VPN</string>
+
     <!-- Navbar -->
     <string name="systemui_tuner_navbar_title">Layout</string>
     <string name="navigation_bar_format_title">Navbar format</string>
