--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -66,6 +66,10 @@
         android:key="alarm_clock"
         android:title="@string/status_bar_alarm" />
 
+    <com.android.systemui.tuner.StatusBarSwitch
+        android:key="vpn"
+        android:title="@string/quick_settings_vpn_title" />
+
     <PreferenceCategory
         android:key="misc_statusbar_items"
         android:title="@string/misc_statusbar_items_category_title">
