--- a/core/res/res/values/du_config.xml
+++ b/core/res/res/values/du_config.xml
@@ -128,4 +128,7 @@
          Used to decide if we show pulse settings -->
     <bool name="config_ledCanPulse">false</bool>
 
+    <!-- Whether device ignores the RSSNR signal implementation -->
+    <bool name="config_ignoreRssnrSignalLevel">true</bool>
+
 </resources>
